[master] fix: Just button content alignment

--- a/src/components/_buttons/RemoveBlockButton/style.module.sass
+++ b/src/components/_buttons/RemoveBlockButton/style.module.sass
@@ -4,12 +4,12 @@
 	position: absolute
 	top: 62px
 	left: 8px
-	z-index: 2
 	width: 46px
 	height: 46px
 	background: #A0ACB4
 	color: #fff
 	font-size: 34px
 	border: none
+	line-height: 1
 	@include border-radius(46px)
-
+	z-index: 2
